--- a/package.json
+++ b/package.json
@@ -1,21 +1,42 @@
 {
   "name": "spottertracker",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.8",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
+    "@turf/bbox": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
+    "@turf/length": "^6.5.0",
+    "expo": "~47.0.10",
+    "expo-av": "~13.0.2",
+    "expo-clipboard": "^4.0.1",
+    "expo-file-system": "~15.1.1",
+    "expo-location": "~15.0.1",
+    "expo-sensors": "~12.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
+    "expo-storage": "^47.0.0",
+    "expo-task-manager": "~11.0.1",
+    "install": "^0.13.0",
+    "prettier": "^2.8.1",
+    "react": "18.2.0",
+    "react-native": "0.70.6",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-paper": "^5.1.2",
+    "react-native-vector-icons": "^9.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.7",
+    "@testing-library/react": "^13.4.0"
   },
   "private": true
 }
