--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@turf/bbox": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@turf/length": "^6.5.0",
-    "expo": "~47.0.10",
+    "expo": "^47.0.11",
     "expo-av": "~13.0.2",
     "expo-clipboard": "^4.0.1",
     "expo-file-system": "~15.1.1",
