--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "SpotterTracker",
     "slug": "SpotterTracker",
-    "version": "1.0.0",
+    "version": "0.5.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -28,7 +28,11 @@
       "package": "com.anonymous.SpotterTracker",
       "permissions": [
         "ACCESS_BACKGROUND_LOCATION",
-        "ACCESS_BACKGROUND_LOCATION"
+        "ACCESS_COURSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "FOREGROUND_SERVICE",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
       ]
     },
     "web": {
