--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "spottertracker",
-  "version": "1.0.0",
+  "version": "0.5.0",
+  "homepage": "https://github.com/michaelfaith84/SpotterTracker",
+  "author": {
+    "name": "Michael Faith",
+    "email": "michael.p.faith@proton.me"
+  },
+  "bugs": {
+    "url" : "https://github.com/michaelfaith84/SpotterTracker/issues",
+    "email" : "michael.p.faith@proton.me"
+  },
+  "license": "GPL-3.0",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -32,7 +42,8 @@
     "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^5.1.2",
     "react-native-vector-icons": "^9.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
