--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "email": "michael.p.faith@proton.me"
   },
   "bugs": {
-    "url" : "https://github.com/michaelfaith84/SpotterTracker/issues",
-    "email" : "michael.p.faith@proton.me"
+    "url": "https://github.com/michaelfaith84/SpotterTracker/issues",
+    "email": "michael.p.faith@proton.me"
   },
   "license": "GPL-3.0",
   "scripts": {
@@ -41,9 +41,9 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^5.1.2",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-vector-icons": "^9.2.0",
-    "uuid": "^9.0.0",
-    "react-native-safe-area-context": "4.4.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
