--- a/package.json
+++ b/package.json
@@ -12,41 +12,43 @@
   },
   "license": "GPL-3.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
     "@turf/bbox": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@turf/length": "^6.5.0",
-    "expo": "^47.0.11",
-    "expo-av": "~13.0.2",
-    "expo-clipboard": "^4.0.1",
-    "expo-file-system": "~15.1.1",
-    "expo-location": "~15.0.1",
-    "expo-sensors": "~12.0.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-storage": "^47.0.0",
-    "expo-task-manager": "~11.0.1",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.7",
+    "expo-clipboard": "~7.1.5",
+    "expo-dev-client": "~5.2.4",
+    "expo-file-system": "~18.1.11",
+    "expo-location": "~18.1.6",
+    "expo-sensors": "~14.1.4",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "~13.1.6",
     "install": "^0.13.0",
     "prettier": "^2.8.1",
-    "react": "18.2.0",
-    "react-native": "0.70.6",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-get-random-values": "~1.8.0",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.1.2",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
+    "@babel/core": "^7.26.0",
     "@testing-library/react": "^13.4.0"
   },
   "private": true
