--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
     "@turf/bbox": "^6.5.0",
@@ -30,7 +37,10 @@
     "expo-clipboard": "~7.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
+    "expo-location-export": "^2.0.1",
     "expo-sensors": "~14.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -38,14 +48,15 @@
     "install": "^0.13.0",
     "prettier": "^2.8.1",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.1.2",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^9.2.0",
-    "uuid": "^9.0.0",
-    "expo-image-picker": "~16.1.4"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
